<?xml version="1.0"?>
<package format="2">
  <name>rplot</name>
  <version>0.0.1</version>
  <description>root app</description>
  <license>MIT</license>
  <author email="nicolas.frick@studium.uni-hamburg.de">Nico</author>
  <maintainer email="nicolas.frick@studium.uni-hamburg.de">Nico</maintainer>
  <url type="repository">https://</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>ROOT</depend>
</package>
